--- a/booking.html
+++ b/booking.html
@@ -5,8 +5,6 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="styles/css.css" />
-	<link rel="stylesheet" href="styles/w3.css">
-	<link href="https://fonts.googleapis.com/css?family=Armata&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -23,33 +21,35 @@
 <body>
 	<section id="intro">
 		<nav class="navbar navbar-expand-md navbar-light">
-		  <div class="container-fluid">
-			<a class="navbar-brand" href="index.html">
-			  <img src="images/logo.png" width="100" height="80" class="d-inline-block align-top" alt="龍品快餐店">
-			</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-			  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-			  <span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-			  <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-				<li class="nav-item active">
-				  <a class="nav-link" href="index.html">關於龍品</a>
-				</li>
-				<li class="nav-item">
-				  <a class="nav-link" href="product.html">產品介紹</a>
-				</li>
-				<li class="nav-item">
-				  <a class="nav-link" href="booking.html">線上訂餐</a>
-				</li>
-			  </ul>
-			  <span class="navbar-text">
-					<a class="text-muted nav-link" href="https://www.facebook.com/%E9%BE%8D%E5%93%81%E5%BF%AB%E9%A4%90%E5%BA%97-300982883289665/?ref=br_rs"><i class="fab fa-facebook-square"></i></i>Facebook</a>				
-			  </span>
+			<div class="container-fluid">
+				<a class="navbar-brand" href="index.html">
+					<img src="images/logo.png" width="100" height="80" class="d-inline-block align-top" alt="龍品快餐店">
+				</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+						<li class="nav-item active">
+							<a class="nav-link" href="index.html">關於龍品</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="product.html">產品介紹</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="booking.html">線上訂餐</a>
+						</li>
+					</ul>
+					<span class="navbar-text">
+						<a class="text-muted nav-link"
+							href="https://www.facebook.com/%E9%BE%8D%E5%93%81%E5%BF%AB%E9%A4%90%E5%BA%97-300982883289665/?ref=br_rs"><i
+								class="fab fa-facebook-square"></i></i>Facebook</a>
+					</span>
+				</div>
 			</div>
-		  </div>
 		</nav>
-	  </section>
+	</section>
 
 	<section id="booking-second" style="background-image: url('images/bg.jpg')" ;>
 		<div class="container">
@@ -104,25 +104,24 @@
 		</div>
 	</section>
 
-	<section id="latest">
-		<footer>
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-4">
-						<img class="img-fluid" src="images/logo1.png">
-					</div>
-					<div class="col-lg-4">
-						<h3>連結</h3>
-						<a href="index.html">關於龍品</a>
-						<a href="product.html">產品介紹</a>
-						<a href="booking.html">線上訂餐</a>
-					</div>
-					<div class="col-lg-4">
-						<h3>聯絡我們</h3>
-						<p>台中市北區北平路二段68之1號<br>tel:(04)-2291-8106</p>
-					</div>
+	<section id="index-latest">
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<img class="img-fluid" src="images/logo1.png">
 				</div>
-		</footer>
+				<div class="col">
+					<h5>連結</h5>
+					<a href="index.html">關於龍品</a></br>
+					<a href="product.html">產品介紹</a></br>
+					<a href="booking.html">線上訂餐</a>
+				</div>
+				<div class="col">
+					<h5>聯絡我們</h5>
+					<p>台中市北區北平路二段68之1號<br>tel:(04)-2291-8106</p>
+				</div>
+			</div>
+		</div>
 	</section>
 
 </body>
