--- a/index.html
+++ b/index.html
@@ -119,29 +119,28 @@
           src='https://maps.google.com.tw/maps?f=q&hl=zh-TW&geocode=&q=台中市北區北平路二段68之1號&z=16&output=embed&t='></iframe>
         <p>營業時間:週一至週六AM11:00-PM8:00</p>
       </div>
-      </div>
+    </div>
   </section>
 
   <section id="index-latest">
-<div class="container">
-        <div class="row">
-          <div class="col-3">
-            <img class="img-fluid" src="images/logo1.png">
-          </div>
-          <div class="col-5">
-            <h5>連結</h5>
-            <a href="index.html">關於龍品</a>
-            <a href="product.html">產品介紹</a>
-            <a href="booking.html">線上訂餐</a>
-          </div>
-          <div class="col-4">
-            <h5>聯絡我們</h5>
-            <p>台中市北區北平路二段68之1號<br>tel:(04)-2291-8106</p>
-          </div>
-        </div>
-        </div>
-      
-  </section>
+		<div class="container">
+		  <div class="row">
+			<div class="col">
+			  <img class="img-fluid" src="images/logo1.png">
+			</div>
+			<div class="col">
+			  <h5>連結</h5>
+			  <a href="index.html">關於龍品</a></br>
+			  <a href="product.html">產品介紹</a></br>
+			  <a href="booking.html">線上訂餐</a>
+			</div>
+			<div class="col">
+			  <h5>聯絡我們</h5>
+			  <p>台中市北區北平路二段68之1號<br>tel:(04)-2291-8106</p>
+			</div>
+		  </div>
+		</div>
+	  </section>
 
   <script>
     // Tabbed Menu
