--- a/product.html
+++ b/product.html
@@ -4,10 +4,9 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-	<link rel="stylesheet" href="styles\css.css" media="screen" type="text/css" />
-	<link href="https://fonts.googleapis.com/css?family=Armata&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="styles/css.css" media="screen" type="text/css" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
@@ -18,37 +17,39 @@
 <body>
 	<section id="intro">
 		<nav class="navbar navbar-expand-md navbar-light">
-		  <div class="container-fluid">
-			<a class="navbar-brand" href="index.html">
-			  <img src="images/logo.png" width="100" height="80" class="d-inline-block align-top" alt="龍品快餐店">
-			</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-			  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-			  <span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-			  <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-				<li class="nav-item active">
-				  <a class="nav-link" href="index.html">關於龍品</a>
-				</li>
-				<li class="nav-item">
-				  <a class="nav-link" href="product.html">產品介紹</a>
-				</li>
-				<li class="nav-item">
-				  <a class="nav-link" href="booking.html">線上訂餐</a>
-				</li>
-			  </ul>
-			  <span class="navbar-text">
-					<a class="text-muted nav-link" href="https://www.facebook.com/%E9%BE%8D%E5%93%81%E5%BF%AB%E9%A4%90%E5%BA%97-300982883289665/?ref=br_rs"><i class="fab fa-facebook-square"></i></i>Facebook</a>				
-			  </span>
+			<div class="container-fluid">
+				<a class="navbar-brand" href="index.html">
+					<img src="images/logo.png" width="100" height="80" class="d-inline-block align-top" alt="龍品快餐店">
+				</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+						<li class="nav-item active">
+							<a class="nav-link" href="index.html">關於龍品</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="product.html">產品介紹</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="booking.html">線上訂餐</a>
+						</li>
+					</ul>
+					<span class="navbar-text">
+						<a class="text-muted nav-link"
+							href="https://www.facebook.com/%E9%BE%8D%E5%93%81%E5%BF%AB%E9%A4%90%E5%BA%97-300982883289665/?ref=br_rs"><i
+								class="fab fa-facebook-square"></i></i>Facebook</a>
+					</span>
+				</div>
 			</div>
-		  </div>
 		</nav>
-	  </section>
+	</section>
 
 	<section id="second">
 		<div class="w3-display-container ">
-			<img src="images\product.jpg" class="img-fluid" alt="龍品快餐店" style="height: 650px; width:100%;">
+			<img src="images\product.jpg" class="img-fluid" alt="龍品快餐店" width="100%">
 			<div class="w3-display-middle">
 				<h1>產品介紹</h1>
 				<p>傳統滷肉搭配各種主餐，讓您回味無窮</p>
@@ -83,7 +84,7 @@
 						<img class="img-fluid rounded mx-auto d-block" src="images\1.png">
 					</div>
 					<div class="col-md-6 col-sm-12">
-						<h1>魯肉便當 </h1>
+						<p class="title">魯肉便當 </p>
 						<p>主餐:滷肉</br>配菜:蛋加三樣菜自選</br>價格:NT60元</p>
 					</div>
 				</div>
@@ -95,7 +96,7 @@
 						<img class="img-fluid rounded mx-auto d-block" src="images\2.png">
 					</div>
 					<div class="col-md-6 order-md-1 ">
-						<h1>特製便當</h1>
+						<p class="title">特製便當</p>
 						<p>主餐:排骨.蝦捲.滷蛋</br>配菜:滷蛋加三樣菜自選</br>價格:NT80元</p>
 					</div>
 				</div>
@@ -107,7 +108,7 @@
 						<img class="img-fluid rounded mx-auto d-block" src="images\3.png" />
 					</div>
 					<div class="col-md-6">
-						<h1>花枝捲飯</h1>
+						<p class="title">花枝捲飯</p>
 						<p>主餐:三條花枝卷</br>配菜:三樣菜自選</br>價格:NT85元</p>
 					</div>
 				</div>
@@ -119,7 +120,7 @@
 						<img class="img-fluid rounded mx-auto d-block" src="images\4.png" />
 					</div>
 					<div class="col-md-6 ">
-						<h1>蝦捲飯</h1>
+						<p class="title">蝦捲飯</p>
 						<p>主餐:三條蝦捲</br>配菜:三樣菜自選</br>價格:NT85元</p>
 					</div>
 				</div>
@@ -131,7 +132,7 @@
 						<img class="img-fluid rounded mx-auto d-block" src="images\5.png" />
 					</div>
 					<div class="col-md-6">
-						<h1>滷排骨飯</h1>
+						<p class="title">滷排骨飯</p>
 						<p>主餐:滷排</br>配菜:三樣菜自選</br>價格:NT80元</p>
 					</div>
 				</div>
@@ -143,7 +144,7 @@
 						<img class="img-fluid rounded mx-auto d-block" src="images\6.png" />
 					</div>
 					<div class="col-md-6 ">
-						<h1>炸雞腿飯</h1>
+						<p class="title">炸雞腿飯</p>
 						<p>主餐:一支雞腿</br>配菜:三樣菜自選</br>價格:NT85元</p>
 					</div>
 				</div>
@@ -155,7 +156,7 @@
 						<img class="img-fluid rounded mx-auto d-block" src="images\7.png" />
 					</div>
 					<div class="col-md-6">
-						<h1>鱈魚飯</h1>
+						<p class="title">鱈魚飯</p>
 						<p>主餐:鱈魚</br>配菜:三樣菜自選</br>價格:NT100元</p>
 					</div>
 				</div>
@@ -167,7 +168,7 @@
 						<img class="img-fluid rounded mx-auto d-block" src="images\8.png" />
 					</div>
 					<div class="col-md-6">
-						<h1>炸排骨飯</h1>
+						<p class="title">炸排骨飯</p>
 						<p>主餐:排骨</br>配菜:三樣菜自選</br>價格:NT80元</p>
 					</div>
 				</div>
@@ -179,7 +180,7 @@
 						<img class="img-fluid rounded mx-auto d-block" src="images\9.png">
 					</div>
 					<div class="col-md-6">
-						<h1>香雞排飯</h1>
+						<p class="title">香雞排飯</p>
 						<p>主餐:香雞排</br>配菜:三樣菜自選</br>價格:NT85元</p>
 					</div>
 				</div>
@@ -192,7 +193,7 @@
 						<img class="img-fluid rounded mx-auto d-block" src="images\10.png">
 					</div>
 					<div class="col-md-6 ">
-						<h1>雙捲飯</h1>
+						<p class="title">雙捲飯</p>
 						<p>主餐:蝦捲兩條.花枝捲一條</br>配菜:三樣菜自選</br>價格:NT85元</p>
 					</div>
 				</div>
@@ -204,7 +205,7 @@
 						<img class="img-fluid rounded mx-auto d-block" src="images\11.png">
 					</div>
 					<div class="col-md-6">
-						<h1>三寶飯</h1>
+						<p class="title">三寶飯</p>
 						<p>主餐:花枝捲一條.蝦捲一條.排骨</br>配菜:三樣菜自選</br>價格:NT85元</p>
 					</div>
 				</div>
@@ -216,7 +217,7 @@
 						<img class="img-fluid rounded mx-auto d-block" src="images\12.png">
 					</div>
 					<div class="col-md-6">
-						<h1>招牌飯</h1>
+						<p class="title">招牌飯</p>
 						<p>主餐:蝦捲兩條.排骨</br>配菜:三樣菜自選</br>價格:NT85元</p>
 					</div>
 				</div>
@@ -224,26 +225,25 @@
 		</section>
 	</div>
 
-	<section id="latest">
-		<footer>
-			<div class="container">
-				<div class="row">
-					<div class="col-md-4">
-						<img class="img-fluid" src="images/logo1.png">
-					</div>
-					<div class="col-md-4">
-						<h3>連結</h3>
-						<a href="index.html">關於龍品</a>
-						<a href="product.html">產品介紹</a>
-						<a href="booking.html">線上訂餐</a>
-					</div>
-					<div class="col-md-4">
-						<h3>聯絡我們</h3>
-						<p>台中市北區北平路二段68之1號<br>Phone:(04)-2291-8106</p>
-					</div>
-				</div>
-		</footer>
-	</section>
+	<section id="index-latest">
+		<div class="container">
+		  <div class="row">
+			<div class="col">
+			  <img class="img-fluid" src="images/logo1.png">
+			</div>
+			<div class="col">
+			  <h5>連結</h5>
+			  <a href="index.html">關於龍品</a></br>
+			  <a href="product.html">產品介紹</a></br>
+			  <a href="booking.html">線上訂餐</a>
+			</div>
+			<div class="col">
+			  <h5>聯絡我們</h5>
+			  <p>台中市北區北平路二段68之1號<br>tel:(04)-2291-8106</p>
+			</div>
+		  </div>
+		</div>
+	  </section>
 </body>
 
 </html>
